modern: changed button-label 'Weitere Themen' -> 'Auswahl'

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -865,7 +865,7 @@
                 "helpButtonText": "Hilfe",
                 "imprintButtonText": "Impressum",
                 "settingsButtonText": "Einstellungen",
-                "moreLayersButtonText": "Weitere Themen",
+                "moreLayersButtonText": "Auswahl",
                 "addLayerButtonText": "Externen WMS hinzufügen",
                 "permalinkButtonText": "Permalink",
                 "spatialSearchTitle": "Räumliche Suche",
