--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -853,7 +853,7 @@
                 "helpButtonText": "Help",
                 "imprintButtonText": "Imprint",
                 "settingsButtonText": "Settings",
-                "moreLayersButtonText": "Further topics",
+                "moreLayersButtonText": "Selection",
                 "addLayerButtonText": "Add external layer",
                 "permalinkButtonText": "Permalink",
                 "spatialSearchTitle": "en:Räumliche Suche",
