--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -245,6 +245,7 @@
                 "basigx-button-zoomout-tooltip": "Zoom out",
                 "basigx-button-zoomtoextent-tooltip": "Zoom to initial view",
                 "basigx-button-togglelegend-tooltip": "Toggle legend",
+                "toggleFullscreen-tooltip": "Switch between full screen and standard view",
                 "importLocalDataButtonText": "Import",
                 "importLocalDataButtonTooltip": "Import local files",
                 "importLocalDataWindowText": "Import",
