adjusted header-title ('Geoportal')

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -245,7 +245,7 @@
                 "chartSlctnMsg": "Layer hat Zeitreihen-, als auch Säulendiagramm. Welches Diagramm soll dargestellt werden?",
                 "chartSlctnTimeSeriesBtn": "Zeitreihendiagramm",
                 "chartSlctnBarChartBtn": "Säulendiagramm",
-                "headerTitle": "Geoportal"
+                "headerTitle": "GEOPORTAL"
             }
         }
     },
