adjusted header-title ('Geoportal')
Conflicts:
	src/resources/locale/app-locale-de.json

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -267,7 +267,7 @@
                 "chartSlctnTimeSeriesBtn": "Zeitreihendiagramm",
                 "chartSlctnBarChartBtn": "Säulendiagramm",
                 "helpTooltip": "Hilfe",
-                "headerTitle": "Geoportal"
+                "headerTitle": "GEOPORTAL"
             }
         }
     },
