--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -266,7 +266,7 @@
                 "chartSlctnMsg": "Layer has a time series as well as a bar chart. Which type of diagram shall be displayed?",
                 "chartSlctnTimeSeriesBtn": "Time Series",
                 "chartSlctnBarChartBtn": "Bar Chart",
-                "headerTitle": "Geoportal"
+                "headerTitle": "GEOPORTAL"
             }
         }
     },
