legend: add time reference info in filterTxt
Conflicts:
	src/app/util/Layer.js

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1,6 +1,8 @@
 {
     "Koala.util.Layer": {
         "statics": {
+            "txtUtc": "(UTC)",
+            "txtLocal": "(lokal)",
             "txtUntil": "bis",
             "titleAddLayer": "Layer",
             "titleAddLayerFilter": "Layerfilter",
