--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -1,6 +1,8 @@
 {
     "Koala.util.Layer": {
         "statics": {
+            "txtUtc": "(UTC)",
+            "txtLocal": "(local)",
             "txtUntil": "until",
             "titleAddLayer": "Layer",
             "titleAddLayerFilter": "Layer-Filter",
