moved time reference info to app.util.Date (show it "globally")
Conflicts:
	src/app/util/Layer.js

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1,8 +1,12 @@
 {
-    "Koala.util.Layer": {
+    "Koala.util.Date": {
         "statics": {
             "txtUtc": "(UTC)",
-            "txtLocal": "(lokal)",
+            "txtLocal": "(lokal)"
+        }
+    },
+    "Koala.util.Layer": {
+        "statics": {
             "txtUntil": "bis",
             "titleAddLayer": "Layer",
             "titleAddLayerFilter": "Layerfilter",
