Remove dangling comma in JSON

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -43,8 +43,8 @@
     },
     "Koala.view.button.ShowRedliningToolsContainer": {
         "config": {
-            "data":{
-                "tooltip": "Drawtools",
+            "data": {
+                "tooltip": "Drawtools"
             }
         }
     },
