added data protection to imprint; edited MobileMenu.scss

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -866,6 +866,9 @@
                 },
                 "sitePolicy": {
                     "title": "Nutzungsbedingungen"
+                },
+                "dataProtection": {
+                    "title": "Datenschutz"
                 }
             }
         }
