--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -245,6 +245,13 @@
             },
         }
     },
+    "Koala.view.form.RodosFilter": {
+        "config": {
+            "data": {
+                "projectComboLabel": "Projekt",
+            },
+        }
+    },
     "Koala.view.grid.MetadataSearch": {
         "config": {
             "data": {
@@ -291,6 +298,7 @@
                 "chartSlctnMsg": "Layer hat Zeitreihen-, als auch Säulendiagramm. Welches Diagramm soll dargestellt werden?",
                 "chartSlctnTimeSeriesBtn": "Zeitreihendiagramm",
                 "chartSlctnBarChartBtn": "Säulendiagramm",
+                "rodosPanelTitle": "RODOS-Filter",
                 "helpTooltip": "Hilfe",
                 "headerTitle": "GEOPORTAL"
             }
@@ -345,7 +353,8 @@
                 "tooltip": "LayerSet wechseln",
                 "tooltext": "Thema wechseln",
                 "btnTextResetThemeTreeFiltering": "Alle Layer",
-                "btnTooltipResetThemeTreeFiltering": "Hebt eine etwaige Filterung der verfügbaren Themen auf."
+                "btnTooltipResetThemeTreeFiltering": "Hebt eine etwaige Filterung der verfügbaren Themen auf.",
+                "rodosWindowTitle": "RODOS Prognosen Filter"
             }
         }
     },
